--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
           </ul>
         </div>
       </section>
-      
+      <script src="/js/load-news.js"></script>
 
     </article>
   </main>
@@ -514,7 +514,7 @@ banner.addEventListener('click', e => e.stopPropagation());
   <script src="./assets/js/script.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/gray-matter@4.0.3/index.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 
 
   <!-- 
@@ -527,3 +527,4 @@ banner.addEventListener('click', e => e.stopPropagation());
 
 
 </html>
+
