--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@ banner.addEventListener('click', e => e.stopPropagation());
     - custom js link
   -->
   <script src="./assets/js/script.js"></script>
-<script src="/js/load-news.js"></script>
+<script src="./js/load-news.js"></script>
     
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 
