--- a/service.html
+++ b/service.html
@@ -371,9 +371,41 @@
     - #BACK TO TOP
   -->
 
+ 
   <a href="#top" class="back-top-btn" aria-label="back to top" data-back-top-btn>
     <ion-icon name="chevron-up"></ion-icon>
   </a>
+
+
+  <a href="tel:+38 050 480 0825" class="call-banner" id="callBanner">
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white">
+    <path d="M22 16.92v3a2 2 0 0 1-2.18 2A19.9 19.9 0 0 1 3.1 4.18 2 2 0 0 1 5.1 2h3a2 2 0 0 1 2 1.72c.12.81.36 1.6.7 2.34a2 2 0 0 1-.45 2.11L9 9a16 16 0 0 0 6 6l.83-.83a2 2 0 0 1 2.11-.45c.74.34 1.53.58 2.34.7A2 2 0 0 1 22 16.92z"/>
+  </svg>
+</a>
+
+<script>
+const banner = document.getElementById('callBanner');
+let hideTimeout;
+
+document.querySelectorAll('.open-call-banner').forEach(btn => {
+  btn.addEventListener('click', e => {
+    e.preventDefault();
+    banner.classList.add('visible');
+    clearTimeout(hideTimeout);
+    hideTimeout = setTimeout(() => banner.classList.remove('visible'), 4000);
+  });
+});
+
+document.addEventListener('click', e => {
+  if (!banner.contains(e.target) && !e.target.classList.contains('open-call-banner')) {
+    banner.classList.remove('visible');
+  }
+});
+
+banner.addEventListener('click', e => e.stopPropagation());
+
+</script>
+
 
 
 
