--- a/aboutus.html
+++ b/aboutus.html
@@ -267,7 +267,7 @@
     - #FOOTER
   -->
 
-  <footer class="footer" style="background-image: url('./assets/images/footer-bg.png')">
+ <footer class="footer" style="background-image: url('./assets/images/footer-bg.png')">
     <div class="container">
       <div class="section footer-top">
         <div class="footer-brand" data-reveal="bottom">
@@ -294,7 +294,7 @@
               </div>
               <div>
                 <p>
-                  Номер телефону : <a href="tel:000232439493" class="contact-link">+38 050 480 0825</a>
+                  Номер телефону : <a href="tel:+38 050 480 0825" class="contact-link">+38 050 480 0825</a>
                 </p>
               </div>
             </li>
@@ -331,7 +331,7 @@
             <a href="#" class="text footer-link">Питання та відповіді</a>
           </li>
         </ul>
-         <div class="footer-list" data-reveal="bottom">
+        <div class="footer-list" data-reveal="bottom">
           
           <form action="" class="footer-form">
             
