--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
           </li>
 
           <li>
-            <a href="#" class="social-link">
+            <a href="https://www.instagram.com/dentis_krop?igsh=MWp3YXR0M3puaXNveQ==" class="social-link">
               <ion-icon name="logo-instagram"></ion-icon>
             </a>
           </li>
