--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
         - #ABOUT
       -->
 
-        <section id="about" class="section about" aria-labelledby="about-label">
+<section id="about" class="section about" aria-labelledby="about-label">
         <div class="container">
           <div class="about-content">
             <p class="section-subtitle title-lg has-after" id="about-label" data-reveal="left">Про наших лікарів</p>
@@ -446,6 +446,7 @@
 -->
 
 <section id="contact-details" class="section-p1" data-wow-delay="0.5s" data-wow-duration="1s">
+  <div class="container">
         <div class="details wow animate__animated animate__fadeInLeft">
           <span>Контактна інформація</span>
             <h2>Ласкаво просимо до Дентіс</h2>
@@ -472,9 +473,16 @@
         <div class="map wow animate__animated animate__fadeInRight">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2643.656772483319!2d32.21787637667696!3d48.501473225757316!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d043f27017c63f%3A0x154da7cabb6e9d5c!2z0JTQtdC90YLQuNGB!5e0!3m2!1suk!2sua!4v1760328933472!5m2!1suk!2sua" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
+     </div>
 </section>
 
+
+
+
+
+
     <section class="review" id="review">
+      <div class="container">
     
     <h1 class="heading"><span>review</span> </h1>
 
@@ -521,7 +529,7 @@
         </div>
 
     </div>
-
+</div>
 </section>
 
  
