--- a/index.html
+++ b/index.html
@@ -560,11 +560,9 @@
               </div>
               <div>
                 <p>
-                  Main Email : <a href="mailto:contact@therapy.com" class="contact-link">contact@&shy;therapy.com</a>
+                  Main Email : <a href="mailto:dentis.verhovsky@gmail.com" class="contact-link">dentis.verhovsky@&shy;gmail.com</a>
                 </p>
-                <p>
-                  Inquiries : <a href="mailto:Info@therapy.com" class="contact-link">Info@therapy.com</a>
-                </p>
+                
               </div>
             </li>
             <li class="contact-item">
@@ -587,7 +585,7 @@
           <address class="address">
             <ion-icon name="map-outline"></ion-icon>
             <span class="text">
-              вулиця Волкова, 9 к2 <br>
+              вулиця Героїв-рятувальників, 9 корпус 2 <br>
               Кропивницький, Україна, 25000
             </span>
           </address>
