--- a/index.html
+++ b/index.html
@@ -742,7 +742,13 @@ banner.addEventListener('click', e => e.stopPropagation());
 <script src="./js/load-news.js"></script>
     
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-
+<skript>
+  if ('serviceWorker' in navigator) {
+  navigator.serviceWorker.register('/sw.js')
+    .then(() => console.log('Service Worker Dentis зареєстровано з повним кешем'))
+    .catch(err => console.error('Помилка Service Worker:', err));
+}
+</script>
 
   <!-- 
     - ionicon link
