--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <link rel="preload" as="image" href="./assets/images/hero-banner.png">
   <link rel="preload" as="image" href="./assets/images/hero-bg.png">
   <link rel="manifest" href="/manifest.json">
-<meta name="theme-color" content="#007BFF">
+<meta name="theme-color" content="#00adb3">
 <link rel="apple-touch-icon" href="/icons/icon-192.png">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
