--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <link rel="manifest" href="/manifest.json">
 <meta name="theme-color" content="#005761">
 <link rel="apple-touch-icon" href="/icons/icon-192.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/icons/icon-180.png">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
     
