--- a/index.html
+++ b/index.html
@@ -27,11 +27,14 @@
 <link rel="apple-touch-icon" sizes="180x180" href="/icons/icon-180.png">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="default">
+  <link rel="stylesheet" href="/pwa/pwa.css">
     
 
 </head>
 
 <body id="top">
+  <div id="dentis-pwa-root"></div>
+  <script src="/pwa/pwa.js" defer></script>
 
   <!-- 
     - #PRELOADER
@@ -48,26 +51,7 @@
   -->
 
  <!-- PWA Install Banner -->
-<div id="pwa-banner" class="pwa-banner hidden">
-  <img src="/assets/icons/icon-192.png" class="pwa-icon" alt="Dentis App">
-  <div class="pwa-info">
-    <strong>Dentis</strong>
-    <p>Встановіть застосунок для швидкого доступу.</p>
-  </div>
-  <button id="pwa-install-btn" class="pwa-btn">Встановити</button>
-  <div id="pwa-close" class="pwa-close">×</div>
-</div>
 
-<!-- iOS Instructions Modal -->
-<div id="pwa-ios-modal" class="pwa-ios-modal hidden">
-  <div class="pwa-ios-card">
-    <h3>Як встановити Dentis</h3>
-    <p>1. Натисніть кнопку «Поділитись».</p>
-    <p>2. Оберіть «На головний екран».</p>
-    <img src="/assets/images/ios-install-guide.png" alt="iOS guide">
-    <button id="pwa-ios-close" class="pwa-btn">Зрозуміло</button>
-  </div>
-</div>
 
 
 
