--- a/index.html
+++ b/index.html
@@ -535,7 +535,21 @@
       </section> 
 -->
 
-      <section id="doctors" class="doctors-grid"></section>
+      <section class="doctors" id="doctors">
+        <h1 class="heading">Наші<span>лікарі</span></h1>
+<div class="box-container">
+  <div class="box">
+          <img src="" alt="">
+          <h3>Верховський Олександр</h3>
+          <span>Головний лікар</span>
+          <div class="share">
+              <a href="#" class="fab fa-facebook-f"></a>
+              <a href="#" class="fab fa-instagram"></a>
+              <a href="#" class="fab fa-linkedin"></a>
+          </div>
+      </div>
+</div>
+      </section>
       <script src="/doctors.js"></script>
       
 
