--- a/index.html
+++ b/index.html
@@ -539,8 +539,8 @@
         <h1 class="heading">Наші<span>лікарі</span></h1>
 <div class="box-container">
   <div class="box">
-          <img src="" alt="">
-          <h3>Верховський Олександр</h3>
+          <img src="assets/images/1.png" alt="">
+          <h3>Верховський Олександр Олександрович</h3>
           <span>Головний лікар</span>
           <div class="share">
               <a href="#" class="fab fa-facebook-f"></a>
