--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
         </div>
 
         <div class="box">
-            <img src="./assets/images/pic-3.png" alt="3">
+            <img src="" alt="3">
             <h3>Юліана Динул</h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
