--- a/index.html
+++ b/index.html
@@ -834,9 +834,11 @@ banner.addEventListener('click', e => e.stopPropagation());
   -->
   <script src="./assets/js/script.js"></script>
 <script src="./js/load-news.js"></script>
-    
+    <!-- 
+    - custom js link
+  
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-
+-->
 
   <!-- 
     - ionicon link
