--- a/index.html
+++ b/index.html
@@ -286,7 +286,14 @@
             <li>
               <div class="service-card" data-reveal="bottom">
                 <div class="card-icon">
-                  <img src="./assets/images/message1.png" width="71" height="71" loading="lazy" alt="icon">
+                 <!-- <img src="./assets/images/message1.png" width="71" height="71" loading="lazy" alt="icon">-->
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="64" height="64" stroke="#0FA3A3" fill="none" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round" role="img" aria-labelledby="cleanTitle">
+  
+  <path d="M12 2c-1.5 0-2.8.8-3.6 2.1C7.2 6 7 7.8 7 9.5 7 13.5 9.9 16.9 13 18c3.1-1.1 6-4.5 6-8.5 0-1.7-.2-3.5-1.4-5.4C14.8 2.8 13.5 2 12 2z"/>
+  <path d="M4 20s2-3 6-3" />
+  <path d="M20 6l-3 3" />
+</svg>
+
                 </div>
                 <h3 class="headline-sm card-title">
                   <a href="#">Діагностика</a>
