--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500;700&family=Rubik:wght@400;500;700&display=swap"
     rel="stylesheet">
-  <link rel="preload" as="image" href="./assets/images/hero-banner.png">
-  <link rel="preload" as="image" href="./assets/images/hero-bg.png">
+  <link rel="preload" fetchpriority="high" as="image" href="./assets/images/hero-banner.png">
+  <link rel="preload" fetchpriority="high" as="image" href="./assets/images/hero-bg.png">
   <link rel="manifest" href="/manifest.json">
 <meta name="theme-color" content="#005761">
 <link rel="apple-touch-icon" href="/icons/icon-192.png">
