--- a/index.html
+++ b/index.html
@@ -31,6 +31,47 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="default">
   <link rel="stylesheet" href="/pwa/pwa.css">
     
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Dentist",
+  "name": "Dentis",
+  "image": "https://dentis.pp.ua/img/logo.png",
+  "@id": "https://dentis.pp.ua",
+  "url": "https://dentis.pp.ua",
+  "telephone": "+380504800825",
+  "priceRange": "₴₴",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "вул. Героїв-рятувальників, 9/2",
+    "addressLocality": "Кропивницький",
+    "addressRegion": "Кіровоградська область",
+    "postalCode": "25000",
+    "addressCountry": "UA"
+  },
+  "geo": {
+    "@type": "GeoCoordinates",
+    "latitude": "48.5018658",
+    "longitude": "32.2201729"
+  },
+  "openingHoursSpecification": [{
+    "@type": "OpeningHoursSpecification",
+    "dayOfWeek": [
+      "Monday",
+      "Tuesday",
+      "Wednesday",
+      "Thursday",
+      "Friday"
+      "Saturday"
+    ],
+    "opens": "09:00",
+    "closes": "18:00"
+  }],
+  "sameAs": [
+    "https://www.instagram.com/dentis_krop?igsh=MWp3YXR0M3puaXNveQ=="
+  ]
+}
+</script>
 
 </head>
 
