--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dentis</title>
-  <meta name="title" content="Dentis">
-  <meta name="description" content="This is a dental html template made by Roman Shkurenko">
+  <meta name="title" content="Dentis"><title>Стоматологія Dentis — лікування зубів у Кропивницькому</title>
+
+<meta name="description" content="Стоматологічна клініка Dentis у Кропивницькому. Лікування зубів, професійна гігієна. Сучасне обладнання, досвідчені лікарі.">
+
+<meta name="keywords" content="стоматологія Кропивницький, стоматолог Кропивницький, лікування зубів, Dentis">
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="canonical" href="https://dentis.pp.ua/">
   <link rel="shortcut icon" href="assets/images/ZARA_LOGO.png" type="image/svg+xml">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
