--- a/index.html
+++ b/index.html
@@ -302,11 +302,11 @@
 
           <div class="hero-content">
            
-            <p class="hero-subtitle has-before" data-reveal="left">Стоматолог у м.Кропивницький</p>
-            <h1 class="headline-lg hero-title" data-reveal="left">
+            <h1 class="hero-subtitle has-before" data-reveal="left">Стоматолог у м.Кропивницький</h1>
+            <p class="headline-lg hero-title" data-reveal="left">
               Посмішка — це інвестиція  <br>
               в себе.
-            </h1>          
+            </p>          
           </div>
 
           <figure class="hero-banner" data-reveal="right">
