--- a/index.html
+++ b/index.html
@@ -5,34 +5,27 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="title" content="Dentis"><title>Стоматологія Dentis — лікування зубів у Кропивницькому</title>
-
-<meta name="description" content="Стоматологічна клініка Dentis у Кропивницькому. Лікування зубів, професійна гігієна. Сучасне обладнання, досвідчені лікарі.">
-
-<meta name="keywords" content="стоматологія Кропивницький, стоматолог Кропивницький, лікування зубів, Dentis">
-
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="canonical" href="https://dentis.pp.ua/">
-  <link rel="shortcut icon" href="assets/images/ZARA_LOGO.png" type="image/svg+xml">
+  <meta name="description" content="Стоматологічна клініка Dentis у Кропивницькому. Лікування зубів, професійна гігієна. Сучасне обладнання, досвідчені лікарі.">
+  <meta name="keywords" content="стоматологія Кропивницький, стоматолог Кропивницький, лікування зубів, Dentis">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="canonical" href="https://dentis.pp.ua/">
+  <link rel="shortcut icon" href="assets/images/Dentis.png" type="image/svg+xml">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500;700&family=Rubik:wght@400;500;700&display=swap"
-    rel="stylesheet">
-    
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500;700&family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">    
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
-  <link rel="stylesheet" href="./assets/css/style.css">
-  
-  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500;700&family=Rubik:wght@400;500;700&display=swap"
-    rel="stylesheet">
+  <link rel="stylesheet" href="./assets/css/style.css">  
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500;700&family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="preload" fetchpriority="high" as="image" href="./assets/images/hero-banner.png">
   <link rel="preload" fetchpriority="high" as="image" href="./assets/images/hero-bg.png">
   <link rel="manifest" href="/manifest.json">
-<meta name="theme-color" content="#005761">
-<link rel="apple-touch-icon" href="/icons/icon-192.png">
-<link rel="apple-touch-icon" sizes="180x180" href="/icons/icon-180.png">
-<meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-status-bar-style" content="default">
+  <meta name="theme-color" content="#005761">
+  <link rel="apple-touch-icon" href="/icons/icon-192.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/icons/icon-180.png">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
   <link rel="stylesheet" href="/pwa/pwa.css">
     
     <script type="application/ld+json">
@@ -79,10 +72,11 @@
 
 </head>
 
+<!-- Банер -->
 <body id="top">
   <div id="pwa-banner" class="pwa-banner">
     <div class="pwa-content">
-      <img src="assets/images/ZARA_LOGO_with_Text.png" alt="Логотип" class="pwa-logo">
+      <img src="assets/images/Dentis_with_Text.png" alt="Логотип" class="pwa-logo">
       <span class="pwa-text">Встановити додаток</span>
       <button id="pwa-install-btn" class="pwa-btn">Встановити</button>
       <button id="pwa-close-btn" class="pwa-close">✕</button>
@@ -169,13 +163,10 @@
   <!-- 
     - #PRELOADER
   -->
-
-
   <div class="preloader" data-preloader>
     <div class="circle"></div>
   </div>
-
-  <!-- Банер -->
+  
   
 
 
@@ -192,14 +183,14 @@
     <div class="container">
 
       <a href="https://dentis.pp.ua/" class="logo" style="font-size: larger;">
-        <img src="./assets/images/ZARA_LOGO_with_Text.png" style=" width: max(11vw,120px);"alt="Zara">
+        <img src="./assets/images/Dentis_with_Text.png" style=" width: max(11vw,120px);"alt="Zara">
       </a>
       <nav class="navbar" data-navbar>
 
         <div class="navbar-top">
 
           <a href="https://dentis.pp.ua/" class="logo">
-            <img src="./assets/images/ZARA_LOGO_with_Text.png" width="120" height="48" alt="Dentis home">
+            <img src="./assets/images/Dentis_with_Text.png" width="120" height="48" alt="Dentis home">
           </a>
 
           <button class="nav-close-btn" aria-label="clsoe menu" data-nav-toggler>
@@ -684,7 +675,7 @@
     <div class="box-container">
 
         <div class="box">
-            <img src="./assets/images/pic-1.png" alt="1">
+            <img src="./assets/images/rew1.avif" alt="1">
             <h3>Pavlo Bidnenko</h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
@@ -697,7 +688,7 @@
         </div>
 
         <div class="box">
-            <img src="./assets/images/pic-2.png" alt="1">
+            <img src="./assets/images/rew2.avif" alt="1">
             <h3>Людмила</h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
@@ -710,7 +701,7 @@
         </div>
 
         <div class="box">
-            <img src="" alt="3">
+            <img src="./assets/images/rew3.avif" alt="3">
             <h3>Юліана Динул</h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
