--- a/index.html
+++ b/index.html
@@ -12,14 +12,13 @@
   <link rel="shortcut icon" href="assets/images/Dentis.png" type="image/svg+xml">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500;700&family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">    
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500;700&family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
   <link rel="stylesheet" href="./assets/css/style.css">
   <link rel="stylesheet" href="./assets/css/doctors.css">
-  <link rel="stylesheet" href="./assets/css/news.css">   
-  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500;700&family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./assets/css/news.css">
   <link rel="preload" fetchpriority="high" as="image" href="./assets/images/hero-banner.png">
   <link rel="preload" fetchpriority="high" as="image" href="./assets/images/hero-bg.png">
   <link rel="manifest" href="/manifest.json">
@@ -60,7 +59,7 @@
       "Tuesday",
       "Wednesday",
       "Thursday",
-      "Friday"
+      "Friday",
       "Saturday"
     ],
     "opens": "09:00",
@@ -168,24 +167,14 @@
   <div class="preloader" data-preloader>
     <div class="circle"></div>
   </div>
-  
-  
-
-
-
-
-
-
   <!-- 
     - #HEADER
   -->
-
-
   <header class="header" data-header>
     <div class="container">
 
       <a href="https://dentis.pp.ua/" class="logo" style="font-size: larger;">
-        <img src="./assets/images/Dentis_with_Text.png" style=" width: max(11vw,120px);"alt="Dentis">
+        <img src="./assets/images/Dentis_with_Text.png" style="width: max(11vw,120px);" alt="Dentis">
       </a>
       <nav class="navbar" data-navbar>
 
@@ -195,7 +184,7 @@
             <img src="./assets/images/Dentis_with_Text.png" width="120" height="48" alt="Dentis home">
           </a>
 
-          <button class="nav-close-btn" aria-label="clsoe menu" data-nav-toggler>
+          <button class="nav-close-btn" aria-label="close menu" data-nav-toggler>
             <ion-icon name="close-outline" aria-hidden="true"></ion-icon>
           </button>
 
@@ -780,13 +769,11 @@
   <a href="#top" class="back-top-btn" aria-label="back to top" data-back-top-btn>
     <ion-icon name="chevron-up"></ion-icon>
   </a>
-
 <a href="tel:+38 050 480 0825" class="call-banner" id="callBanner">
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white">
     <path d="M22 16.92v3a2 2 0 0 1-2.18 2A19.9 19.9 0 0 1 3.1 4.18 2 2 0 0 1 5.1 2h3a2 2 0 0 1 2 1.72c.12.81.36 1.6.7 2.34a2 2 0 0 1-.45 2.11L9 9a16 16 0 0 0 6 6l.83-.83a2 2 0 0 1 2.11-.45c.74.34 1.53.58 2.34.7A2 2 0 0 1 22 16.92z"/>
   </svg>
 </a>
-
 <script>
 const banner = document.getElementById('callBanner');
 let hideTimeout;
@@ -805,10 +792,6 @@ document.addEventListener('click', e => {
 });
 banner.addEventListener('click', e => e.stopPropagation());
 </script>
-
-
-
-
   <!-- 
     - custom js link
   -->
