--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <!-- Банер -->
   <div id="pwa-banner" class="pwa-banner">
     <div class="pwa-content">
-      <img src="assets/images/Dentis_with_Text.png" alt="Логотип" class="pwa-logo">
+      <img src="assets/images/Dentis.png" alt="Логотип" class="pwa-logo">
       <span class="pwa-text">Встановити додаток</span>
       <button id="pwa-install-btn" class="pwa-btn">Встановити</button>
       <button id="pwa-close-btn" class="pwa-close">✕</button>
@@ -359,8 +359,9 @@
           <ul class="grid-list">           
           </ul>
         </div>
+        <script src="/assets/js/news.js"></script> 
       </section>
-      <script src="/assets/js/news.js"></script>     
+          
       
      <!-- 
         - #doc
