--- a/index.html
+++ b/index.html
@@ -463,9 +463,8 @@
 
 
 
-
-
-    <section class="review" id="review">
+<!--
+ <section class="review" id="section review">
           
     
     <h1 class="heading"><span>Відгуки</span> </h1>
@@ -514,7 +513,7 @@
 
     </div>
 
-</section>
+</section>-->
 
 
  
