--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="shortcut icon" href="assets/images/Dentis.png" type="image/svg+xml">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500;700&family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
@@ -184,11 +185,11 @@
       <section class="section hero" style="background-image: url('./assets/images/hero-bg.png')" aria-label="home">      
         <div class="container">
           <div class="hero-content">           
-            <h1 class="hero-subtitle has-before" data-reveal="left">Стоматолог у м.Кропивницький</h1>
-            <p class="headline-lg hero-title" data-reveal="left">
+            <p class="hero-subtitle has-before" data-reveal="left">Стоматолог у м.Кропивницький</p>
+            <h1 class="headline-lg hero-title" data-reveal="left">
               Посмішка — це інвестиція  <br>
               в себе.
-            </p>          
+            </h1>          
           </div>
           <figure class="hero-banner" data-reveal="right">
             <img src="./assets/images/hero-banner.png"  alt="hero banner"
@@ -367,7 +368,7 @@
         - #doc
       -->
   <section id="doctors" class="section doctors">
-      <div class="container doctors">
+      <div class="container">
         <div class="section doctors tittle">
         <h1 class="section-subtitle title-lg text-center" id="blog-label" data-reveal="bottom">Наші</h1>
           <h2 class="section-title headline-md text-center" data-reveal="bottom">Лікарі</h2>
@@ -463,8 +464,9 @@
 
 
 
-<!--
+
  <section class="review" id="section review">
+  <div class="container">
           
     
     <h1 class="heading"><span>Відгуки</span> </h1>
@@ -512,8 +514,8 @@
         </div>
 
     </div>
-
-</section>-->
+  </div>
+</section>
 
 
  
