--- a/index.html
+++ b/index.html
@@ -196,8 +196,8 @@
           </div>
           <figure class="hero-banner" data-reveal="right">
             <picture>
-              <source type="image/avif" srcset="./assets/images/opt/about-banner.avif">
-              <source type="image/webp" srcset="./assets/images/opt/about-banner.webp">
+              <source type="image/avif" srcset="">
+              <source type="image/webp" srcset="">
               <img src="./assets/images/about-banner.png" alt="Герой банер — стоматологія Dentis" class="w-100">
             </picture>
           </figure>
